<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/append"
        android:title="@string/menu_append"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add" />
    <item
        android:id="@+id/search"
        android:title="@string/menu_search"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/edit"
        android:title="@string/menu_edit"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/arrange"
        android:title="@string/menu_arrange"
        android:orderInCategory="4"
        app:showAsAction="never"/>
    <item
        android:id="@+id/complete"
        android:title="@string/menu_complete"
        android:orderInCategory="5"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:title="@string/menu_share"
        android:orderInCategory="6"
        app:showAsAction="never" />
    <item
        android:id="@+id/options"
        android:title="@string/menu_options"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>