<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".NewMemoActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20sp"
        android:paddingBottom="120sp"
        android:paddingHorizontal="20sp"
        android:background="@drawable/box_frame"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_topic"
            android:hint="@string/hint_topic"
            android:textSize="25sp"

            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            style="@style/edit_style" />

        <EditText
            android:id="@+id/edit_summary"
            android:layout_below="@id/edit_topic"
            android:hint="@string/hint_summary"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/edit_topic"
            style="@style/edit_style" />
    </RelativeLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/switch_date"
        style="@style/switch_style" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/switch_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/switch_place"
        style="@style/switch_style" />

    <include
        layout="@layout/save_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/switch_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/liner_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:text="@string/button_cancel"
            style="@style/button_style" />

        <Button
            android:id="@+id/save"
            android:text="@string/button_save"
            style="@style/button_style" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>