<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/liner_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="20sp"
        android:paddingBottom="30sp"
        android:paddingTop="10sp"
        android:background="@drawable/detail_box_frame"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/show_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/liner_show"
        android:layout_marginTop="10sp"
        layout="@layout/save_location"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/complete"
            style="@style/detail_button_style"
            android:drawableTop="@drawable/ic_checked"
            android:text="@string/button_complete" />

        <Button
            android:id="@+id/edit"
            android:text="@string/button_edit"
            style="@style/detail_button_style"
            android:drawableTop="@drawable/ic_pencil"/>
        <Button
            android:id="@+id/delete"
            android:text="@string/button_delete"
            style="@style/detail_button_style"
            android:drawableTop="@drawable/ic_deleted"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>